Better solution for overflowing `.tab-content` Using `overflow: hidden` instead of `display: table` as suggested by @necolas Fix the border between tabs and content for `.tabs-right`

--- a/less/navs.less
+++ b/less/navs.less
@@ -443,9 +443,6 @@
 }
 .tabs-right.tabbable-bordered {
   border-width: 0 0 0 1px;
-  > .nav-tabs {
-    right: 1px;
-  }
   > .tab-content {
     border-width: 1px 1px 1px 0;
     padding: 20px 20px 10px 20px;
